golden/error/unescape_uppercase.test
"Valid: \u000A; Invalid: \U000A."

# output:
 --> stdin:1:25
  |
1 | "Valid: \u000A; Invalid: \U000A."
  |                          ^~
Error: Invalid escape sequence.

Help: Escape sequences are written lowercase.
